<resources>
    <string name="app_name">veiled clothes</string>
    
    <string name="bottom_home_item"> Accueil</string>
    <string name="bottom_collection_item">Collection </string>
    <string name="bottom_add_clothe_item">Ajouter</string>

    <!--page d'accueil-->
    <string name="home_page_title">A découvrire </string>
    <string name="home_page_last_clothes_section">dernières vêtement </string>

    <!--page de collection-->
    <string name="collection_page_title">Ma Collection </string>

    <!--page d'ajout de vêtements-->
    <string name="add_clothes_page_title">Ajout vêtement</string>
    <string name="add_clothes_page_upload_button">charger une image</string>
    <string name="add_clothes_page_name_input">@string/item_clothes_name </string>
    <string name="add_clothes_page_description_input">@string/item_clothes_description </string>
    <string name="add_clothes_page_price_input">prix du vêtement</string>
    <string-array name="add_clothes_page_state_spinner_input">
        <item> Etat : neuf avec étiquette </item>
        <item> Etat : neuf sans étiquette </item>
        <item> Etat : trés bon état </item>
        <item> Etat : bon état </item>
        <item> Etat : satisfant </item>
    </string-array>
    <string name="add_clothes_page_confirm_button">confirmer</string>

    <!--fenetre popup de détails-->
    <string name="popup_vetement_name">vêtement name</string>
    <string name="popup_vetement_description_title">description</string>
    <string name="popup_vetement_description_subtitle">Petite description</string>
    <string name="popup_vetement_price_title"> Prix </string>
    <string name="popup_vetement_price_value"> Prix </string>
    <string name="popup_vetement_state_title"> Etat </string>
    <string name="popup_vetement_state_subtitle">neuf avec étiquette</string>


    <!--vêtement_costumise-->
    <string name="item_clothes_name">nom de vêtement  </string>
    <string name="item_clothes_description">description de vêtement  </string>
    <string name="Bienvenue" />
    <string name="Username" />
    <string name="login">Login</string>
    <string name="pass" />
    <string name="create_new_account">Create new account</string>
</resources>