<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleX="1.01">

    <TextView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="97dp"
        android:contentDescription="@string/Bienvenue"
        android:text="Bienvenue"
        android:textColor="@color/black"
        android:textColorHint="#13497B"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/Username"
        android:text="Username"
        android:textColor="@color/purple_200"
        android:textColorHint="#13497B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="351dp"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textColorLink="#13497B" />

    <TextView
        android:id="@+id/imageView7"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="73dp"
        android:contentDescription="@string/pass"
        android:text="Password"
        android:textColor="@color/purple_200"
        android:textColorHint="#13497B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="681dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/login_password_input"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/inputname"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="-643dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="70dp"
        android:text="@string/create_new_account"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>